--- a/index.html
+++ b/index.html
@@ -5,31 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skardu Organic</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Montserrat', sans-serif;
-        }
-        .interactive-glow-section {
-            position: relative;
-            overflow: hidden;
-        }
-        .interactive-glow-section::before {
-            content: "";
-            position: absolute;
-            inset: 0;
-            z-index: 0;
-            background: radial-gradient(400px circle at var(--x) var(--y), rgba(255, 255, 255, 0.08), transparent 80%);
-            opacity: 0;
-            transition: opacity 0.3s ease-in-out;
-        }
-        .interactive-glow-section:hover::before {
-            opacity: 1;
-        }
-    </style>
 <script type="importmap">
 {
   "imports": {
@@ -42,6 +21,6 @@
 </head>
 <body class="bg-white">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
